--- a/manifest.json
+++ b/manifest.json
@@ -9,47 +9,62 @@
 		{
 			"src": "icons/icon-44x44.png",
 			"sizes": "44x44",
-			"type": "image/png"
+			"type": "image/png",
+			"purpose": "any"
 		},
 		{
 			"src": "icons/icon-50x50.png",
 			"sizes": "50x50",
-			"type": "image/png"
+			"type": "image/png",
+			"purpose": "any"
 		},
 		{
 			"src": "icons/apple-touch-icon-57x57.png",
 			"sizes": "57x57",
-			"type": "image/png"
+			"type": "image/png",
+			"purpose": "any"
 		},
 		{
 			"src": "icons/icon-71x71.png",
 			"sizes": "71x71",
-			"type": "image/png"
+			"type": "image/png",
+			"purpose": "any"
 		},
 		{
 			"src": "icons/icon-150x150.png",
 			"sizes": "150x150",
-			"type": "image/png"
+			"type": "image/png",
+			"purpose": "any"
 		},
 		{
 			"src": "icons/apple-touch-icon-180x180.png",
 			"sizes": "180x180",
-			"type": "image/png"
+			"type": "image/png",
+			"purpose": "any"
 		},
 		{
 			"src": "icons/icon-192x192.png",
 			"sizes": "192x192",
-			"type": "image/png"
+			"type": "image/png",
+			"purpose": "any"
 		},
 		{
 			"src": "icons/icon-310x310.png",
 			"sizes": "310x310",
-			"type": "image/png"
+			"type": "image/png",
+			"purpose": "any"
 		},
 		{
 			"src": "icons/icon-512x512.png",
 			"sizes": "512x512",
-			"type": "image/png"
+			"type": "image/png",
+			"purpose": "any"
+		},
+		{
+			"src": "icons/icon-maskable.png",
+			"sizes": "512x512",
+			"type": "image/png",
+			"purpose": "maskable"
 		}
 	]
 }
